# ownsuite

./: .ansible-lint  .env.example  .gitignore  .yamllint  404.html  AGENTS.md  INSTALL-FINDINGS.md  Makefile  README.md  ROADMAP.md  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements-docs.txt  requirements.txt  ruff.toml  sitemap.xml  suite.yaml.example
.github/: SECURITY.md
.github/workflows/: README.md  apps-e2e.yml  bootstrap-e2e.yml  ci.yml  docs.yml  helmfile-ci.yml  helmfile-e2e.yml  nightly-apps-e2e.yml  terraform-ci.yml
ansible/: ansible.cfg  bootstrap.yml  requirements.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.example.yml
completions/: suite.bash  suite.zsh
docs/: index.md  roadmap.md
helmfile/: helmfile.yaml.gotmpl
molecule/: requirements.yml
search/: search_index.json
stylesheets/: extra.css
suite/: __init__.py  apply.py  backup.py  bootstrap.py  cli.py  config.py  dns.py  errors.py  info.py  ip.py  keycloak.py  mail.py  manifest.py  process.py  prompt.py  propagation.py  provision.py  restore.py  spec.py  state.py  status.py  steps.py  sync.py  tunnel.py  upgrade.py  users.py  verify.py
terraform/: README.md
tests/: conftest.py  test_apply.py  test_backup.py  test_bootstrap.py  test_completion.py  test_config.py  test_dns.py  test_ip.py  test_keycloak.py  test_mail.py  test_manifest.py  test_propagation.py  test_provision.py  test_restore.py  test_spec.py  test_state.py  test_status.py  test_steps.py  test_sync.py  test_upgrade.py  test_users.py
(+254 files in other folders)
